# corg

./: Cargo.toml  README.md  README2.md  example.md
.github/workflows/: codecov.yml  publish.yml  test.yml
src/: bin.rs  error.rs  lib.rs  options.rs  state.rs
tests/: corg.rs
