[package]
name = "corg"
version = "0.1.0"

edition = "2021"

readme = "README.md"
license = "Apache-2.0"

[features]
cli = ["clap", "difference", "colored"]

[lib]
name = "corg"
path = "src/lib.rs"

[[bin]]
name = "corg"
path = "src/bin.rs"
required-features = ["cli"]

[dependencies]
regex = "1.5.4"
clap = {version = "3.0.7", features = ["derive"], optional = true}
thiserror = "1.0.26"
lazy_static = "1.4.0"
difference = {version = "2.0.0", optional = true}
colored = {version = "2.0.0", optional = true}
