[package]
name = "corg"
version = "0.1.0"

edition = "2021"

readme = "README.md"
license = "Apache-2.0"

[features]
cli = ["anyhow", "difference", "clap", "colored"]

[lib]
name = "corg"
path = "src/lib.rs"

[[bin]]
name = "corg"
path = "src/bin.rs"
required-features = ["cli"]

[dependencies]
regex = "1.5.4"
shlex = "1.0.0"
thiserror = "1.0.26"

anyhow = {version = "1.0.42", optional = true}
clap = {version = "3.0.7", features = ["derive"], optional = true}
colored = {version = "2.0.0", optional = true}
difference = {version = "2.0.0", optional = true}
md5 = "0.7.0"
